[UI] Results screen displays resulted annotated video.

--- a/frontend/assets/localization/app_en.arb
+++ b/frontend/assets/localization/app_en.arb
@@ -119,5 +119,7 @@
   "noResultsAvailable": "No results available",
   "errorProcessingResults": "Error Processing Results",
   "failedToDownloadJSON": "Failed to download JSON",
-  "failedToDownloadCSV": "Failed to download CSV"
+  "failedToDownloadCSV": "Failed to download CSV",
+  "noVideoAvailable": "No annotated video available",
+  "loadingVideo": "Loading video..."
 }
