--- a/frontend/assets/localization/user_manual_ro.arb
+++ b/frontend/assets/localization/user_manual_ro.arb
@@ -3,7 +3,8 @@
   "userManualIntro": "Urmați acești pași pentru a începe:",
   "userManualStepUpload": "Faceți clic pe canvas sau pe butonul de încărcare pentru a selecta un videoclip.",
   "userManualStepWait": "Așteptați în timp ce serverul pregătește miniatura.",
-  "userManualStepDraw": "Faceți clic pentru a adăuga puncte pe imagine pentru a crea linii de direcție, adăugați etichete și blocați-le.",
+  "userManualStepDraw": "Faceți clic pentru a adăuga puncte pe imagine pentru a crea linii de direcție, adăugați etichete și salvați-le. Selectați care linie este considerată punctul de intrare.",
   "userManualStepSend": "Trimiteți direcțiile blocate către backend.",
-  "userManualTip": "Sfat: Puteți schimba culorile înainte de a desena o nouă direcție."
+  "userManualTip": "Sfat: Puteți schimba culorile înainte de a desena o nouă direcție.",
+  "userManualEditingLine": "Puteți edita coordonatele unei linii selectând-o, alegând un punct de coordonate (selectați în cardul de direcție) și folosind tastele WASD. Tastele W și S mută coordonatele Y în sus și în jos, în timp ce A și D mută coordonatele X la stânga și la dreapta."
 }
